cargo_check_debug_zones.log
warning: unused import: `Pixel`
 --> crates/forge-test-tools/src/screenshot.rs:1:24
  |
1 | use image::{RgbaImage, Pixel};
  |                        ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ElementState` and `MouseButton`
 --> crates/forge-test-tools/src/input_sim.rs:1:20
  |
1 | use winit::event::{ElementState, MouseButton, WindowEvent};
  |                    ^^^^^^^^^^^^  ^^^^^^^^^^^

warning: `forge-test-tools` (lib) generated 2 warnings (run `cargo fix --lib -p forge-test-tools` to apply 2 suggestions)
    Checking forge-app v0.1.0 (/app/crates/forge-app)
error[E0412]: cannot find type `AppState` in this scope
 --> crates/forge-app/src/application_impl_debug.rs:2:57
  |
2 | impl forge_test_tools::zone_debug::ZoneDebugContext for AppState {
  |                                                         ^^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
2 + use crate::application::AppState;
  |

error[E0277]: the trait bound `AppState: ZoneDebugContext` is not satisfied
   --> crates/forge-app/src/application.rs:932:63
    |
932 |             forge_test_tools::zone_debug::enable_zone_overlay(state);
    |             ------------------------------------------------- ^^^^^ unsatisfied trait bound
    |             |
    |             required by a bound introduced by this call
    |
help: the trait `ZoneDebugContext` is not implemented for `AppState`
   --> crates/forge-app/src/application.rs:163:1
    |
163 | struct AppState {
    | ^^^^^^^^^^^^^^^
note: required by a bound in `enable_zone_overlay`
   --> /app/crates/forge-test-tools/src/zone_debug.rs:6:31
    |
  6 | pub fn enable_zone_overlay<C: ZoneDebugContext>(context: &mut C) {
    |                               ^^^^^^^^^^^^^^^^ required by this bound in `enable_zone_overlay`

warning: variable does not need to be mutable
   --> crates/forge-app/src/application.rs:365:13
    |
365 |         let mut file_explorer = crate::file_explorer::FileExplorer::new();
    |             ----^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0412.
For more information about an error, try `rustc --explain E0277`.
warning: `forge-app` (bin "forge") generated 1 warning
error: could not compile `forge-app` (bin "forge") due to 2 previous errors; 1 warning emitted
